--- a/src/BookShop.Web.UI/BookShop.Web.UI.csproj
+++ b/src/BookShop.Web.UI/BookShop.Web.UI.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\lib\" />
+    <Folder Include="wwwroot\img\social_media\" />
   </ItemGroup>
 
 </Project>
